--- a/index.html
+++ b/index.html
@@ -263,11 +263,6 @@
             color: var(--dark-color);
         }
 
-        #quizButton {
-            background-color: var(--purple-color);
-            display: none; /* Initially hidden */
-        }
-
         #viewResultButton {
             background-color: var(--secondary-color); /* Hoặc chọn màu phù hợp */
             display: none; /* Ẩn ban đầu */
@@ -531,14 +526,17 @@
         <canvas id="canvas" style="display: none;"></canvas>
 
         <div class="button-container">
+            <!-- Nút ban đầu: Hướng Dẫn, Chụp Ảnh, Tải Ảnh Lên -->
             <button id="instructionButton" aria-label="Hướng Dẫn">Hướng Dẫn</button>
-            <button id="captureButton" aria-label="Chụp ảnh">Bắt Đầu</button>
+            <button id="captureButton" aria-label="Chụp ảnh">Chụp Ảnh</button>
             <button id="uploadButton" aria-label="Tải ảnh lên">Tải Ảnh Lên</button>
-            <button id="downloadButton" aria-label="Tải ảnh xuống" style="display: none;">Tải Ảnh Xuống</button>
+
+            <!-- Nút sau khi chụp hoặc tải ảnh: Kết Quả -->
+            <button id="viewResultButton" aria-label="Kết Quả" style="display: none;">Kết Quả</button>
+
+            <!-- Các nút xuất hiện sau khi nhận diện: Đọc, Chụp Lại -->
             <button id="readButton" aria-label="Đọc ý nghĩa biển báo" style="display: none;">Đọc</button>
             <button id="retakeButton" aria-label="Chụp lại" style="display: none;">Chụp Lại</button>
-            <!-- Thêm nút "Xem Kết Quả" -->
-            <button id="viewResultButton" aria-label="Xem Kết Quả" style="display: none;">Xem Kết Quả</button>
         </div>
 
         <!-- Hidden file input for uploading images -->
@@ -556,7 +554,7 @@
         <div id="signMeaning" aria-live="polite"></div>
 
         <!-- Nút "Trang Chủ" -->
-        <div id="quizButton-container">
+        <div id="quizButton-container" style="display: none;">
             <button id="quizButton" aria-label="Trang Chủ" title="Trang Chủ">Trang Chủ</button>
         </div>
     </div>
@@ -573,12 +571,12 @@
             <h2 id="instructionModalTitle">Hướng Dẫn Sử Dụng</h2>
             <div id="instructionModalDescription">
                 <ol>
-                    <li>Nhấn nút <strong>"Bắt Đầu"</strong> để khởi động camera.</li>
+                    <li>Nhấn nút <strong>"Chụp Ảnh"</strong> để khởi động camera.</li>
                     <li>Khi camera đã khởi động, nhấn nút <strong>"Chụp Ảnh"</strong> để bắt đầu quá trình chụp hình biển báo giao thông.</li>
                     <li>Đảm bảo camera của bạn được đặt sao cho biển báo rõ ràng và trung tâm trong khung hình.</li>
                     <li>Sau khi chụp, hệ thống sẽ tự động nhận diện biển báo và hiển thị kết quả.</li>
                     <li>Nhấn nút <strong>"Đọc"</strong> để nghe lại ý nghĩa của biển báo đã nhận diện.</li>
-                    <li>Chọn nút <strong>"Trang Chủ"</strong> để quay lại trang chủ.</li>
+                    <li>Chọn nút <strong>"Chụp Lại"</strong> để quay lại trang chụp ảnh.</li>
                 </ol>
                 <p>Số lượng biển báo có thể nhận diện: <strong id="totalSigns">0</strong></p>
             </div>
@@ -599,7 +597,7 @@
         const downloadButton = document.getElementById('downloadButton');
         const readButton = document.getElementById('readButton');
         const retakeButton = document.getElementById('retakeButton');
-        const viewResultButton = document.getElementById('viewResultButton'); // Nút "Xem Kết Quả"
+        const viewResultButton = document.getElementById('viewResultButton'); // Nút "Kết Quả"
         const capturedImage = document.getElementById('capturedImage');
         const predictionResult = document.getElementById('predictionResult');
         const signMeaning = document.getElementById('signMeaning');
@@ -608,6 +606,10 @@
         const signCount = document.getElementById('totalSigns');
         const quizButton = document.getElementById('quizButton');
         const overlay = document.querySelector('.overlay');
+        const instructionButton = document.getElementById('instructionButton');
+        const instructionModal = document.getElementById('instructionModal');
+        const closeButton = document.querySelector('.close-button');
+
         let stream = null;
         let isProcessing = false;
         let cameraStarted = false; // Biến trạng thái camera
@@ -677,7 +679,7 @@
             if (!cameraStarted) {
                 // Nếu camera chưa được khởi động, bắt đầu camera
                 try {
-                    // Hide placeholder image and show video
+                    // Ẩn placeholder image và hiển thị video
                     placeholderImage.style.display = 'none';
                     video.style.display = 'block';
                     overlay.style.display = 'block'; // Show overlay khi video đang hoạt động
@@ -694,14 +696,6 @@
                 }
             } else {
                 // Nếu camera đã được khởi động, tiến hành chụp ảnh
-                // Ẩn các nút hiện tại và hiển thị nút "Xem Kết Quả"
-                downloadButton.style.display = 'none';
-                readButton.style.display = 'none';
-                retakeButton.style.display = 'none';
-                viewResultButton.style.display = 'inline-block';
-
-                loadingPrediction.style.display = 'flex';
-
                 try {
                     // Kiểm tra xem video đã sẵn sàng chưa
                     if (video.readyState < 3) { // HAVE_CURRENT_DATA = 2, HAVE_FUTURE_DATA = 3
@@ -742,15 +736,10 @@
                     predictionResult.innerHTML = "";
                     signMeaning.textContent = "";
                     signMeaning.style.display = 'none'; // Ẩn signMeaning khi chụp lại
-                    // Ẩn nút "Đọc" và "Tải ảnh xuống"
-                    readButton.style.display = 'none';
-                    downloadButton.style.display = 'none';
-                    // Hiển thị nút "Xem Kết Quả"
-                    viewResultButton.style.display = 'inline-block';
-                    quizButton.style.display = 'none'; // Ẩn nút "Trang Chủ"
 
-                    // Không gọi predictImage() ngay lập tức
-                    // Thay vào đó, người dùng sẽ nhấn "Xem Kết Quả"
+                    // Hiển thị nút "Kết Quả"
+                    viewResultButton.style.display = 'inline-block';
+
                 } catch (error) {
                     console.error("Lỗi khi chụp ảnh: ", error);
                     alert("Đã xảy ra lỗi khi chụp ảnh. Vui lòng thử lại.");
@@ -788,7 +777,7 @@
             retakeButton.style.display = 'none';
             viewResultButton.style.display = 'none';
             captureButton.style.display = 'inline-block';
-            captureButton.textContent = "Bắt Đầu"; // Reset nhãn nút sau khi chụp lại
+            captureButton.textContent = "Chụp Ảnh"; // Reset nhãn nút sau khi chụp lại
 
             // Stop the video stream nếu nó đang hoạt động
             if (stream) {
@@ -798,7 +787,7 @@
 
             cameraStarted = false; // Reset trạng thái camera
 
-            // Show placeholder image and hide video and overlay
+            // Show placeholder image và ẩn video và overlay
             placeholderImage.style.display = 'block';
             video.style.display = 'none';
             overlay.style.display = 'none';
@@ -920,25 +909,19 @@
                             signMeaning.textContent = meaningText;
                             signMeaning.style.display = 'block'; // Hiển thị phần signMeaning
                             readButton.style.display = 'inline-block';
-                            downloadButton.style.display = 'inline-block';
                             retakeButton.style.display = 'inline-block';
-                            quizButton.style.display = 'none'; // Ẩn nút "Trang Chủ"
                         } else {
                             signMeaning.textContent = "Ý nghĩa: Đây là một hình ảnh không phải là hình biển báo giao thông. Bạn hãy nhấn vào nút Chụp lại hoặc nút Tải ảnh lên để kiểm tra. Lưu ý để kết quả nhận diện đúng cần đảm bảo chất lượng ảnh chụp rõ nét, đảm bảo kích thước.";
                             signMeaning.style.display = 'block'; // Hiển thị phần signMeaning
                             readButton.style.display = 'inline-block';
-                            downloadButton.style.display = 'inline-block';
                             retakeButton.style.display = 'inline-block';
-                            quizButton.style.display = 'none'; // Ẩn nút "Trang Chủ"
                         }
                     } else {
                         predictionResult.innerHTML = `<span style="color: var(--error-color);">Không có kết quả nhận diện.</span>`;
                         signMeaning.textContent = "";
                         signMeaning.style.display = 'none'; // Ẩn phần signMeaning
                         readButton.style.display = 'none';
-                        downloadButton.style.display = 'none';
                         retakeButton.style.display = 'none';
-                        quizButton.style.display = 'none'; // Ẩn nút "Trang Chủ"
                     }
                 });
             } catch (err) {
@@ -947,9 +930,7 @@
                 signMeaning.textContent = "";
                 signMeaning.style.display = 'none'; // Ẩn phần signMeaning
                 readButton.style.display = 'none';
-                downloadButton.style.display = 'none';
                 retakeButton.style.display = 'none';
-                quizButton.style.display = 'none'; // Ẩn nút "Trang Chủ"
             } finally {
                 loadingPrediction.style.display = 'none';
             }
@@ -973,17 +954,16 @@
         });
 
         /**
-         * Event listener cho nút "Xem Kết Quả"
+         * Event listener cho nút "Kết Quả"
          */
         viewResultButton.addEventListener('click', async () => {
-            // Ẩn nút "Xem Kết Quả" và hiển thị các nút khác
+            // Hiển thị kết quả nhận diện
+            await predictImage();
+
+            // Ẩn nút "Kết Quả" và hiển thị các nút khác
             viewResultButton.style.display = 'none';
             readButton.style.display = 'inline-block';
-            downloadButton.style.display = 'inline-block';
             retakeButton.style.display = 'inline-block';
-
-            // Thực hiện dự đoán
-            await predictImage();
         });
 
         /**
@@ -1017,9 +997,6 @@
         // Event listener cho nút "Chụp Lại"
         retakeButton.addEventListener('click', retakePhoto);
 
-        // Thêm sự kiện cho nút "Tải Ảnh Xuống"
-        downloadButton.addEventListener('click', downloadPhoto);
-
         // Event listener cho nút "Tải Ảnh Lên"
         uploadButton.addEventListener('click', () => {
             uploadInput.click(); // Trigger click on hidden file input
@@ -1041,13 +1018,11 @@
                     downloadButton.style.display = 'none';
                     readButton.style.display = 'none';
                     retakeButton.style.display = 'none';
+                    viewResultButton.style.display = 'inline-block';
                     quizButton.style.display = 'none';
                     predictionResult.innerHTML = "";
                     signMeaning.textContent = "";
                     signMeaning.style.display = 'none'; // Ẩn signMeaning khi tải ảnh lên
-
-                    // Hiển thị nút "Xem Kết Quả"
-                    viewResultButton.style.display = 'inline-block';
 
                     // Vẽ ảnh lên canvas để dự đoán
                     const img = new Image();
@@ -1067,7 +1042,7 @@
                         canvas.height = canvasHeight;
                         context.drawImage(img, 0, 0, canvasWidth, canvasHeight);
                         // Không gọi predictImage() ngay lập tức
-                        // Thay vào đó, người dùng sẽ nhấn "Xem Kết Quả"
+                        // Thay vào đó, người dùng sẽ nhấn "Kết Quả"
                     };
                 };
                 reader.readAsDataURL(file);
@@ -1113,9 +1088,6 @@
         /**
          * Event Listener cho Modal Hướng Dẫn
          */
-        const instructionButton = document.getElementById('instructionButton');
-        const instructionModal = document.getElementById('instructionModal');
-        const closeButton = document.querySelector('.close-button');
 
         // Open the modal
         instructionButton.addEventListener('click', () => {
